feat(swagger):Adicionar FeiraSwagger